// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createConfig > applies style rules 1`] = `
{
  "language": "@/js",
  "languageOptions": {
    "ecmaVersion": 2025,
    "parser": "typescript-eslint/parser@8.17.0",
    "parserOptions": {
      "projectService": true,
      "tsconfigRootDir": "/Users/sebastian/Workspace/effective-eslint-next",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "@typescript-eslint:@typescript-eslint/eslint-plugin@8.17.0",
  ],
  "processor": undefined,
  "rules": {
    "@typescript-eslint/adjacent-overload-signatures": [
      2,
    ],
    "@typescript-eslint/array-type": [
      2,
    ],
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
    ],
    "@typescript-eslint/ban-tslint-comment": [
      2,
    ],
    "@typescript-eslint/class-literal-property-style": [
      2,
    ],
    "@typescript-eslint/consistent-generic-constructors": [
      2,
    ],
    "@typescript-eslint/consistent-indexed-object-style": [
      2,
    ],
    "@typescript-eslint/consistent-type-assertions": [
      2,
    ],
    "@typescript-eslint/consistent-type-definitions": [
      2,
    ],
    "@typescript-eslint/dot-notation": [
      2,
      {
        "allowIndexSignaturePropertyAccess": false,
        "allowKeywords": true,
        "allowPattern": "",
        "allowPrivateClassPropertyAccess": false,
        "allowProtectedClassPropertyAccess": false,
      },
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-confusing-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-empty-function": [
      2,
      {
        "allow": [],
      },
    ],
    "@typescript-eslint/no-empty-object-type": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-inferrable-types": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-require-imports": [
      2,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-function-type": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unsafe-unary-minus": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
    ],
    "@typescript-eslint/no-wrapper-object-types": [
      2,
    ],
    "@typescript-eslint/non-nullable-type-assertion-style": [
      2,
    ],
    "@typescript-eslint/only-throw-error": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-find": [
      2,
    ],
    "@typescript-eslint/prefer-for-of": [
      2,
    ],
    "@typescript-eslint/prefer-function-type": [
      2,
    ],
    "@typescript-eslint/prefer-includes": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-nullish-coalescing": [
      2,
    ],
    "@typescript-eslint/prefer-optional-chain": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/prefer-regexp-exec": [
      2,
    ],
    "@typescript-eslint/prefer-string-starts-ends-with": [
      2,
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
    ],
    "@typescript-eslint/restrict-template-expressions": [
      2,
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "for-direction": [
      2,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
      "except-parens",
    ],
    "no-constant-binary-expression": [
      2,
    ],
    "no-constant-condition": [
      2,
      {
        "checkLoops": "allExceptWhileTrue",
      },
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": false,
      },
    ],
    "no-empty-character-class": [
      2,
    ],
    "no-empty-pattern": [
      2,
      {
        "allowObjectPatternsAsParameters": false,
      },
    ],
    "no-empty-static-block": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
      {},
    ],
    "no-fallthrough": [
      2,
      {
        "allowEmptyCase": false,
        "reportUnusedFallthroughComment": false,
      },
    ],
    "no-global-assign": [
      2,
      {
        "exceptions": [],
      },
    ],
    "no-invalid-regexp": [
      2,
      {},
    ],
    "no-irregular-whitespace": [
      2,
      {
        "skipComments": false,
        "skipJSXText": false,
        "skipRegExps": false,
        "skipStrings": true,
        "skipTemplates": false,
      },
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-self-assign": [
      2,
      {
        "props": true,
      },
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
      {
        "disallowArithmeticOperators": false,
      },
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      2,
    ],
    "no-useless-backreference": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-with": [
      2,
    ],
    "prefer-const": [
      2,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "use-isnan": [
      2,
      {
        "enforceForIndexOf": false,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      2,
      {
        "requireStringLiterals": false,
      },
    ],
  },
}
`;

exports[`createConfig > combines all options 1`] = `
{
  "language": "@/js",
  "languageOptions": {
    "ecmaVersion": 2025,
    "parser": "typescript-eslint/parser@8.17.0",
    "parserOptions": {
      "projectService": true,
      "tsconfigRootDir": "/Users/sebastian/Workspace/effective-eslint-next",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "@typescript-eslint:@typescript-eslint/eslint-plugin@8.17.0",
  ],
  "processor": undefined,
  "rules": {
    "@typescript-eslint/adjacent-overload-signatures": [
      2,
    ],
    "@typescript-eslint/array-type": [
      2,
    ],
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
      {
        "minimumDescriptionLength": 10,
      },
    ],
    "@typescript-eslint/ban-tslint-comment": [
      2,
    ],
    "@typescript-eslint/class-literal-property-style": [
      2,
    ],
    "@typescript-eslint/consistent-generic-constructors": [
      2,
    ],
    "@typescript-eslint/consistent-indexed-object-style": [
      2,
    ],
    "@typescript-eslint/consistent-type-assertions": [
      2,
    ],
    "@typescript-eslint/consistent-type-definitions": [
      2,
    ],
    "@typescript-eslint/dot-notation": [
      2,
      {
        "allowIndexSignaturePropertyAccess": false,
        "allowKeywords": true,
        "allowPattern": "",
        "allowPrivateClassPropertyAccess": false,
        "allowProtectedClassPropertyAccess": false,
      },
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-confusing-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-confusing-void-expression": [
      2,
    ],
    "@typescript-eslint/no-deprecated": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-dynamic-delete": [
      2,
    ],
    "@typescript-eslint/no-empty-function": [
      2,
      {
        "allow": [],
      },
    ],
    "@typescript-eslint/no-empty-object-type": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-extraneous-class": [
      2,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-inferrable-types": [
      2,
    ],
    "@typescript-eslint/no-invalid-void-type": [
      2,
    ],
    "@typescript-eslint/no-meaningless-void-operator": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-mixed-enums": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-nullish-coalescing": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-require-imports": [
      2,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-condition": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-template-expression": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-arguments": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-parameters": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-function-type": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unsafe-unary-minus": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
    ],
    "@typescript-eslint/no-useless-constructor": [
      2,
    ],
    "@typescript-eslint/no-wrapper-object-types": [
      2,
    ],
    "@typescript-eslint/non-nullable-type-assertion-style": [
      2,
    ],
    "@typescript-eslint/only-throw-error": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-find": [
      2,
    ],
    "@typescript-eslint/prefer-for-of": [
      2,
    ],
    "@typescript-eslint/prefer-function-type": [
      2,
    ],
    "@typescript-eslint/prefer-includes": [
      2,
    ],
    "@typescript-eslint/prefer-literal-enum-member": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-nullish-coalescing": [
      2,
    ],
    "@typescript-eslint/prefer-optional-chain": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/prefer-reduce-type-parameter": [
      2,
    ],
    "@typescript-eslint/prefer-regexp-exec": [
      2,
    ],
    "@typescript-eslint/prefer-return-this-type": [
      2,
    ],
    "@typescript-eslint/prefer-string-starts-ends-with": [
      2,
    ],
    "@typescript-eslint/related-getter-setter-pairs": [
      2,
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
      {
        "allowAny": false,
        "allowBoolean": false,
        "allowNullish": false,
        "allowNumberAndString": false,
        "allowRegExp": false,
      },
    ],
    "@typescript-eslint/restrict-template-expressions": [
      2,
      {
        "allowAny": false,
        "allowBoolean": false,
        "allowNever": false,
        "allowNullish": false,
        "allowNumber": false,
        "allowRegExp": false,
      },
    ],
    "@typescript-eslint/return-await": [
      2,
      "error-handling-correctness-only",
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "@typescript-eslint/unified-signatures": [
      2,
    ],
    "@typescript-eslint/use-unknown-in-catch-callback-variable": [
      2,
    ],
    "for-direction": [
      2,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
      "except-parens",
    ],
    "no-constant-binary-expression": [
      2,
    ],
    "no-constant-condition": [
      2,
      {
        "checkLoops": "allExceptWhileTrue",
      },
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": false,
      },
    ],
    "no-empty-character-class": [
      2,
    ],
    "no-empty-pattern": [
      2,
      {
        "allowObjectPatternsAsParameters": false,
      },
    ],
    "no-empty-static-block": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
      {},
    ],
    "no-fallthrough": [
      2,
      {
        "allowEmptyCase": false,
        "reportUnusedFallthroughComment": false,
      },
    ],
    "no-global-assign": [
      2,
      {
        "exceptions": [],
      },
    ],
    "no-invalid-regexp": [
      2,
      {},
    ],
    "no-irregular-whitespace": [
      2,
      {
        "skipComments": false,
        "skipJSXText": false,
        "skipRegExps": false,
        "skipStrings": true,
        "skipTemplates": false,
      },
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-self-assign": [
      2,
      {
        "props": true,
      },
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
      {
        "disallowArithmeticOperators": false,
      },
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      2,
    ],
    "no-useless-backreference": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-with": [
      2,
    ],
    "prefer-const": [
      2,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "use-isnan": [
      2,
      {
        "enforceForIndexOf": false,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      2,
      {
        "requireStringLiterals": false,
      },
    ],
  },
}
`;

exports[`createConfig > enables strict rules 1`] = `
{
  "language": "@/js",
  "languageOptions": {
    "ecmaVersion": 2025,
    "parser": "typescript-eslint/parser@8.17.0",
    "parserOptions": {
      "projectService": true,
      "tsconfigRootDir": "/Users/sebastian/Workspace/effective-eslint-next",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "@typescript-eslint:@typescript-eslint/eslint-plugin@8.17.0",
  ],
  "processor": undefined,
  "rules": {
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
      {
        "minimumDescriptionLength": 10,
      },
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-confusing-void-expression": [
      2,
    ],
    "@typescript-eslint/no-deprecated": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-dynamic-delete": [
      2,
    ],
    "@typescript-eslint/no-empty-object-type": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-extraneous-class": [
      2,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-invalid-void-type": [
      2,
    ],
    "@typescript-eslint/no-meaningless-void-operator": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-mixed-enums": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-nullish-coalescing": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-require-imports": [
      2,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-condition": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-template-expression": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-arguments": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-parameters": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-function-type": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unsafe-unary-minus": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
    ],
    "@typescript-eslint/no-useless-constructor": [
      2,
    ],
    "@typescript-eslint/no-wrapper-object-types": [
      2,
    ],
    "@typescript-eslint/only-throw-error": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-literal-enum-member": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/prefer-reduce-type-parameter": [
      2,
    ],
    "@typescript-eslint/prefer-return-this-type": [
      2,
    ],
    "@typescript-eslint/related-getter-setter-pairs": [
      2,
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
      {
        "allowAny": false,
        "allowBoolean": false,
        "allowNullish": false,
        "allowNumberAndString": false,
        "allowRegExp": false,
      },
    ],
    "@typescript-eslint/restrict-template-expressions": [
      2,
      {
        "allowAny": false,
        "allowBoolean": false,
        "allowNever": false,
        "allowNullish": false,
        "allowNumber": false,
        "allowRegExp": false,
      },
    ],
    "@typescript-eslint/return-await": [
      2,
      "error-handling-correctness-only",
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "@typescript-eslint/unified-signatures": [
      2,
    ],
    "@typescript-eslint/use-unknown-in-catch-callback-variable": [
      2,
    ],
    "for-direction": [
      2,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
      "except-parens",
    ],
    "no-constant-binary-expression": [
      2,
    ],
    "no-constant-condition": [
      2,
      {
        "checkLoops": "allExceptWhileTrue",
      },
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": false,
      },
    ],
    "no-empty-character-class": [
      2,
    ],
    "no-empty-pattern": [
      2,
      {
        "allowObjectPatternsAsParameters": false,
      },
    ],
    "no-empty-static-block": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
      {},
    ],
    "no-fallthrough": [
      2,
      {
        "allowEmptyCase": false,
        "reportUnusedFallthroughComment": false,
      },
    ],
    "no-global-assign": [
      2,
      {
        "exceptions": [],
      },
    ],
    "no-invalid-regexp": [
      2,
      {},
    ],
    "no-irregular-whitespace": [
      2,
      {
        "skipComments": false,
        "skipJSXText": false,
        "skipRegExps": false,
        "skipStrings": true,
        "skipTemplates": false,
      },
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-self-assign": [
      2,
      {
        "props": true,
      },
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
      {
        "disallowArithmeticOperators": false,
      },
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      2,
    ],
    "no-useless-backreference": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-with": [
      2,
    ],
    "prefer-const": [
      2,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "use-isnan": [
      2,
      {
        "enforceForIndexOf": false,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      2,
      {
        "requireStringLiterals": false,
      },
    ],
  },
}
`;

exports[`createConfig > excludes rules covered by Biome 1`] = `
{
  "language": "@/js",
  "languageOptions": {
    "ecmaVersion": 2025,
    "parser": "typescript-eslint/parser@8.17.0",
    "parserOptions": {
      "projectService": true,
      "tsconfigRootDir": "/Users/sebastian/Workspace/effective-eslint-next",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "@typescript-eslint:@typescript-eslint/eslint-plugin@8.17.0",
  ],
  "processor": undefined,
  "rules": {
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-empty-object-type": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-require-imports": [
      2,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-function-type": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unsafe-unary-minus": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
    ],
    "@typescript-eslint/no-wrapper-object-types": [
      2,
    ],
    "@typescript-eslint/only-throw-error": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
    ],
    "@typescript-eslint/restrict-template-expressions": [
      2,
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "for-direction": [
      2,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
      "except-parens",
    ],
    "no-constant-binary-expression": [
      2,
    ],
    "no-constant-condition": [
      2,
      {
        "checkLoops": "allExceptWhileTrue",
      },
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": false,
      },
    ],
    "no-empty-character-class": [
      2,
    ],
    "no-empty-pattern": [
      2,
      {
        "allowObjectPatternsAsParameters": false,
      },
    ],
    "no-empty-static-block": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
      {},
    ],
    "no-fallthrough": [
      2,
      {
        "allowEmptyCase": false,
        "reportUnusedFallthroughComment": false,
      },
    ],
    "no-global-assign": [
      2,
      {
        "exceptions": [],
      },
    ],
    "no-invalid-regexp": [
      2,
      {},
    ],
    "no-irregular-whitespace": [
      2,
      {
        "skipComments": false,
        "skipJSXText": false,
        "skipRegExps": false,
        "skipStrings": true,
        "skipTemplates": false,
      },
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-self-assign": [
      2,
      {
        "props": true,
      },
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
      {
        "disallowArithmeticOperators": false,
      },
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      2,
    ],
    "no-useless-backreference": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-with": [
      2,
    ],
    "prefer-const": [
      2,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "use-isnan": [
      2,
      {
        "enforceForIndexOf": false,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      2,
      {
        "requireStringLiterals": false,
      },
    ],
  },
}
`;

exports[`createConfig > generates a base configuration 1`] = `
{
  "language": "@/js",
  "languageOptions": {
    "ecmaVersion": 2025,
    "parser": "typescript-eslint/parser@8.17.0",
    "parserOptions": {
      "projectService": true,
      "tsconfigRootDir": "/Users/sebastian/Workspace/effective-eslint-next",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "@typescript-eslint:@typescript-eslint/eslint-plugin@8.17.0",
  ],
  "processor": undefined,
  "rules": {
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-empty-object-type": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-require-imports": [
      2,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-function-type": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unsafe-unary-minus": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
    ],
    "@typescript-eslint/no-wrapper-object-types": [
      2,
    ],
    "@typescript-eslint/only-throw-error": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
    ],
    "@typescript-eslint/restrict-template-expressions": [
      2,
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "for-direction": [
      2,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
      "except-parens",
    ],
    "no-constant-binary-expression": [
      2,
    ],
    "no-constant-condition": [
      2,
      {
        "checkLoops": "allExceptWhileTrue",
      },
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": false,
      },
    ],
    "no-empty-character-class": [
      2,
    ],
    "no-empty-pattern": [
      2,
      {
        "allowObjectPatternsAsParameters": false,
      },
    ],
    "no-empty-static-block": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
      {},
    ],
    "no-fallthrough": [
      2,
      {
        "allowEmptyCase": false,
        "reportUnusedFallthroughComment": false,
      },
    ],
    "no-global-assign": [
      2,
      {
        "exceptions": [],
      },
    ],
    "no-invalid-regexp": [
      2,
      {},
    ],
    "no-irregular-whitespace": [
      2,
      {
        "skipComments": false,
        "skipJSXText": false,
        "skipRegExps": false,
        "skipStrings": true,
        "skipTemplates": false,
      },
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-self-assign": [
      2,
      {
        "props": true,
      },
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
      {
        "disallowArithmeticOperators": false,
      },
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      2,
    ],
    "no-useless-backreference": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-with": [
      2,
    ],
    "prefer-const": [
      2,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "use-isnan": [
      2,
      {
        "enforceForIndexOf": false,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      2,
      {
        "requireStringLiterals": false,
      },
    ],
  },
}
`;

exports[`createConfig > includes React-specific rules 1`] = `
{
  "language": "@/js",
  "languageOptions": {
    "ecmaVersion": 2025,
    "parser": "typescript-eslint/parser@8.17.0",
    "parserOptions": {
      "projectService": true,
      "tsconfigRootDir": "/Users/sebastian/Workspace/effective-eslint-next",
    },
    "sourceType": "module",
  },
  "linterOptions": {
    "reportUnusedDisableDirectives": 1,
  },
  "plugins": [
    "@",
    "@typescript-eslint:@typescript-eslint/eslint-plugin@8.17.0",
  ],
  "processor": undefined,
  "rules": {
    "@typescript-eslint/await-thenable": [
      2,
    ],
    "@typescript-eslint/ban-ts-comment": [
      2,
    ],
    "@typescript-eslint/no-array-constructor": [
      2,
    ],
    "@typescript-eslint/no-array-delete": [
      2,
    ],
    "@typescript-eslint/no-base-to-string": [
      2,
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      2,
    ],
    "@typescript-eslint/no-duplicate-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-empty-object-type": [
      2,
    ],
    "@typescript-eslint/no-explicit-any": [
      2,
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      2,
    ],
    "@typescript-eslint/no-floating-promises": [
      2,
    ],
    "@typescript-eslint/no-for-in-array": [
      2,
    ],
    "@typescript-eslint/no-implied-eval": [
      2,
    ],
    "@typescript-eslint/no-misused-new": [
      2,
    ],
    "@typescript-eslint/no-misused-promises": [
      2,
    ],
    "@typescript-eslint/no-namespace": [
      2,
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      2,
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      2,
    ],
    "@typescript-eslint/no-require-imports": [
      2,
    ],
    "@typescript-eslint/no-this-alias": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      2,
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      2,
    ],
    "@typescript-eslint/no-unsafe-argument": [
      2,
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      2,
    ],
    "@typescript-eslint/no-unsafe-call": [
      2,
    ],
    "@typescript-eslint/no-unsafe-declaration-merging": [
      2,
    ],
    "@typescript-eslint/no-unsafe-enum-comparison": [
      2,
    ],
    "@typescript-eslint/no-unsafe-function-type": [
      2,
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      2,
    ],
    "@typescript-eslint/no-unsafe-return": [
      2,
    ],
    "@typescript-eslint/no-unsafe-unary-minus": [
      2,
    ],
    "@typescript-eslint/no-unused-expressions": [
      2,
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      2,
    ],
    "@typescript-eslint/no-wrapper-object-types": [
      2,
    ],
    "@typescript-eslint/only-throw-error": [
      2,
    ],
    "@typescript-eslint/prefer-as-const": [
      2,
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      2,
    ],
    "@typescript-eslint/prefer-promise-reject-errors": [
      2,
    ],
    "@typescript-eslint/require-await": [
      2,
    ],
    "@typescript-eslint/restrict-plus-operands": [
      2,
    ],
    "@typescript-eslint/restrict-template-expressions": [
      2,
    ],
    "@typescript-eslint/triple-slash-reference": [
      2,
    ],
    "@typescript-eslint/unbound-method": [
      2,
    ],
    "for-direction": [
      2,
    ],
    "no-async-promise-executor": [
      2,
    ],
    "no-case-declarations": [
      2,
    ],
    "no-compare-neg-zero": [
      2,
    ],
    "no-cond-assign": [
      2,
      "except-parens",
    ],
    "no-constant-binary-expression": [
      2,
    ],
    "no-constant-condition": [
      2,
      {
        "checkLoops": "allExceptWhileTrue",
      },
    ],
    "no-control-regex": [
      2,
    ],
    "no-debugger": [
      2,
    ],
    "no-delete-var": [
      2,
    ],
    "no-dupe-else-if": [
      2,
    ],
    "no-duplicate-case": [
      2,
    ],
    "no-empty": [
      2,
      {
        "allowEmptyCatch": false,
      },
    ],
    "no-empty-character-class": [
      2,
    ],
    "no-empty-pattern": [
      2,
      {
        "allowObjectPatternsAsParameters": false,
      },
    ],
    "no-empty-static-block": [
      2,
    ],
    "no-ex-assign": [
      2,
    ],
    "no-extra-boolean-cast": [
      2,
      {},
    ],
    "no-fallthrough": [
      2,
      {
        "allowEmptyCase": false,
        "reportUnusedFallthroughComment": false,
      },
    ],
    "no-global-assign": [
      2,
      {
        "exceptions": [],
      },
    ],
    "no-invalid-regexp": [
      2,
      {},
    ],
    "no-irregular-whitespace": [
      2,
      {
        "skipComments": false,
        "skipJSXText": false,
        "skipRegExps": false,
        "skipStrings": true,
        "skipTemplates": false,
      },
    ],
    "no-loss-of-precision": [
      2,
    ],
    "no-misleading-character-class": [
      2,
    ],
    "no-nonoctal-decimal-escape": [
      2,
    ],
    "no-octal": [
      2,
    ],
    "no-prototype-builtins": [
      2,
    ],
    "no-regex-spaces": [
      2,
    ],
    "no-self-assign": [
      2,
      {
        "props": true,
      },
    ],
    "no-shadow-restricted-names": [
      2,
    ],
    "no-sparse-arrays": [
      2,
    ],
    "no-unsafe-finally": [
      2,
    ],
    "no-unsafe-optional-chaining": [
      2,
      {
        "disallowArithmeticOperators": false,
      },
    ],
    "no-unused-labels": [
      2,
    ],
    "no-unused-private-class-members": [
      2,
    ],
    "no-useless-backreference": [
      2,
    ],
    "no-useless-catch": [
      2,
    ],
    "no-useless-escape": [
      2,
    ],
    "no-var": [
      2,
    ],
    "no-with": [
      2,
    ],
    "prefer-const": [
      2,
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": false,
      },
    ],
    "prefer-rest-params": [
      2,
    ],
    "prefer-spread": [
      2,
    ],
    "require-yield": [
      2,
    ],
    "use-isnan": [
      2,
      {
        "enforceForIndexOf": false,
        "enforceForSwitchCase": true,
      },
    ],
    "valid-typeof": [
      2,
      {
        "requireStringLiterals": false,
      },
    ],
  },
}
`;
